# ask-openai.nvim

./: .ask.context  .config.fish  .editorconfig  .gitignore  .luarc.json  .rag.yaml  Makefile  README.md  prompt.test.txt  pyproject.toml  pytest.ini  start-rag-server.sh  venv-fix-5090.fish  venv-fix-ask_lan.fish  venv-fix-buil21.fish  venv-fix-build21.fish
.agents/auto_skills/: fish_abbrs.md
.agents/global/: NOTES.md
.agents/global/instructs/: README.md  back_and_forth.md  check_your_work.md  fish_abbrs.md  follow_notes.md
.agents/instructs/: python_chat_viewer.md  rag.md
.agents/local/instructs/: web_chat_viewer.md
.agents/skills/: README.md  fish_abbrs.md  verify_nvim_tests.md
.agents/skills/refactor_shell_longoptions/: SKILL.md
.agents/skills/remove_your_comments/: SKILL.md
.agents/skills/run-lua/: SKILL.md
.agents/skills/test_fetch/: SKILL.md
.agents/skills/verify_lua_config/: SKILL.md
.agents/skills/verify_neovim_lua_config/: SKILL.md
.ask/: lua.md  project.md
.ctags.d/: base.ctags
.githooks/: post-checkout  post-merge
.github/workflows/: deploy-chat-viewer.yml
lua/ask-openai/: api.lua  cmd-suggest.lua  config.lua  copilot.lua  health.lua  hints.lua  hlgroups.lua  init.lua  key.lua  local_config.lua  new.lua  suggest.lua
lua/ask-openai/agents/: ask.notes.md  buffers.lua  curl_request.tests.lua  curl_request_for_trace.lua  frontend.lua  performance.lua  trace.lua  window.lua
lua/ask-openai/backends/: curl.lua  curl_request.lua  curl_streaming.lua  json_client.lua  last_request.lua  middle_end.lua  middleend.lua  oai_chat.lua  oai_chat.notes.md  oai_chat_completions.lua  oai_completions.lua  oai_completions.notes.md  openai_schema.lua  sse.lua  sse_parse_notes.md  todo-intelligent-pager-idea.md  todo_curl_streaming.lua  todo_ollama_api_generate.lua
lua/ask-openai/cmdline/: suggest.lua
lua/ask-openai/config/: init.lua  local_share.lua
lua/ask-openai/frontends/: instructs.lua  instructs.tests.lua  prompts.lua  skills.lua  skills.tests.lua
lua/ask-openai/helpers/: buffer_testing.lua  buffers.lua  files.lua  float_window.lua  safely.lua  selection.lua  selection.tests.lua  tables.lua  tables.tests.lua  test_setup.lua  testing.lua  text.lua  uv_spawn.lua  wrap_getpos.lua  wrap_getpos.tests.lua
lua/ask-openai/logs/: completion_logger.lua  flogger.lua  logger.lua  logger.tests.lua
lua/ask-openai/perf/: init.lua
notes/: fim.md
notes/fim_scenarios/: starcoder2.md
tests/: test.lua  test_split_h2_markdown_sections.py
tests/duplicate_detection/: learn-minhash.lua
tests/hang-repro/: cmd_hanging.md
tests/languages/: README.md
tests/manual_prompting/: repo_calc_02_edits.py  repo_calc_03_pasteboard.py  repo_calc_edits.py  repo_calc_user.py  show.py
tests/plenary-learning/: window-selection-clipboard.tests.lua
tests/rewrites/: inline.lua  integration.lua  integrations.lua
tools/: __init__.py
tools/chat_viewer/: .gitignore  __init__.py  __main__.py  markdown_utils.py  markdown_utils_tests.py  preapproved.txt  run_process_formatter.py  run_process_formatter_tests.py  timing_utils.py  timing_utils_tests.py  timings.py  timings_tests.py  tree_wrapper.py  tree_wrapper_tests.py
tools/chat_viewer_web/: .editorconfig  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tools/pii_scanner/: __main__.py  requirements.txt  scanner.py
tools/trace_cost/: __main__.py
tools/trace_dump/: __main__.py
wip/: Dockerfile
(+660 files in other folders)
