[project]
name = "ask-openai-nvim"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "assertpy>=1.1",
    "asyncio>=3.4.3",
    "faiss-cpu>=1.11.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "llama-cpp-python>=0.3.14",
    "matplotlib>=3.10.3",
    "msgpack>=1.1.1",
    "numpy>=2.3.0",
    "pathspec>=0.12.1",
    "pydantic>=2.11.7",
    "pygls>=1.3.1",
    "pympler>=1.1",
    "pytest>=8.4.1",
    "pytest-watch>=4.2.0",
    "rank-bm25>=0.2.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "sentence-transformers>=4.1.0",
    "setuptools>=80.9.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-lua>=0.2.0",
    "tree-sitter-python>=0.23.6",
    "yapf>=0.43.0",
]
